--- a/university_management/views/course.xml
+++ b/university_management/views/course.xml
@@ -6,10 +6,12 @@
         <field name="model">uni.course</field>
         <field name="arch" type="xml">
             <tree string="Course">
-                <field name="course_id"/>
-                <field name="name"/>
+                <field name="course_code"/>
+                <field name="course_name"/>
+                <field name="credit"/>
+                <field name="description"/>
                 <field name="department"/>
-                <field name="faculty"/>
+                <field name="semester"/>
             </tree>
         </field>
     </record>
@@ -27,41 +29,22 @@
                     <div class="oe_button_box" name="button_box">
 
                     </div>
-
                     <div class="oe_title">
                         <h1>
-                            <field name="course_id" placeholder="Course ID"/>
+                            <field name="course_code" placeholder="Course Code"/>
                         </h1>
                     </div>
                     <group>
                         <group>
-                            <field name="name"/>
+                            <field name="course_name"/>
+                            <field name="credit"/>
+                            <field name="description"/>
+                        </group>
+                        <group>
                             <field name="department"/>
-                            <field name="faculty"/>
+                            <field name="semester"/>
                         </group>
                     </group>
-                    <notebook>
-                        <page string="Students">
-                            <field name="student_course">
-                                <tree editable="bottom">
-                                    <field name="student_id"/>
-                                    <!--                                    <field name="student_gender"/>-->
-                                    <field name="student_email"/>
-                                    <!--                                    <field name="student_course_id" invisible="1"/>-->
-                                </tree>
-                                <form>
-                                    <group>
-                                        <group>
-                                            <field name="student_id"/>
-                                        </group>
-                                        <group>
-                                            <field name="student_email"/>
-                                        </group>
-                                    </group>
-                                </form>
-                            </field>
-                        </page>
-                    </notebook>
                 </sheet>
             </form>
         </field>
