--- a/university_management/views/department.xml
+++ b/university_management/views/department.xml
@@ -6,10 +6,8 @@
         <field name="model">uni.department</field>
         <field name="arch" type="xml">
             <tree string="Department">
-                <field name="dept_id"/>
-                <field name="name"/>
-<!--                <field name="gender"/>-->
-<!--                <field name="email"/>-->
+                <field name="dept_code"/>
+                <field name="dept_name"/>
             </tree>
         </field>
     </record>
@@ -27,26 +25,17 @@
                     <div class="oe_button_box" name="button_box">
 
                     </div>
-
-                    <!--                     <div class="oe_title">-->
-                    <!--                        <h1>-->
-                    <!--                            <field name="name" placeholder="Name" />-->
-                    <!--                        </h1>-->
-                    <!--                    </div>-->
+                    <div class="oe_title">
+                        <h1>
+                            <field name="dept_code" placeholder="Department Code"/>
+                        </h1>
+                    </div>
                     <group>
                         <group>
-                            <field name="dept_id"/>
-                            <field name="name"/>
-<!--                            <field name="gender"/>-->
-<!--                            <field name="email"/>-->
+                            <field name="dept_name"/>
                         </group>
-                        <!--                        <group>-->
-                        <!--                            -->
-                        <!--                        </group>-->
                     </group>
-
                 </sheet>
-
             </form>
         </field>
     </record>
