--- a/university_management/views/faculty.xml
+++ b/university_management/views/faculty.xml
@@ -7,8 +7,10 @@
         <field name="arch" type="xml">
             <tree string="Faculty">
                 <field name="name"/>
-                <field name="gender"/>
-                <field name="email"/>
+                <field name="faculty_email"/>
+                <field name="address"/>
+                <field name="contact_no"/>
+                <field name="designation"/>
                 <field name="department"/>
             </tree>
         </field>
@@ -30,19 +32,21 @@
 
                     <div class="oe_title">
                         <h1>
-                            <field name="name" placeholder="Name"/>
+                            <field name="faculty_id" placeholder="Faculty ID"/>
                         </h1>
                     </div>
                     <group>
                         <group>
-<!--                            <field name="name"/>-->
-                            <field name="gender"/>
-                            <field name="email"/>
-                            <field name="department"/>
+                            <field name="name"/>
+                            <field name="faculty_email"/>
+                            <field name="address"/>
+                            <field name="contact_no"/>
                         </group>
-                        <!--                        <group>-->
-                        <!--                            -->
-                        <!--                        </group>-->
+                        <group>
+                            <field name="department"/>
+                            <field name="designation"/>
+                            <field name="credit"/>
+                        </group>
                     </group>
 
                 </sheet>
