--- a/university_management/views/student.xml
+++ b/university_management/views/student.xml
@@ -30,19 +30,20 @@
 
                     <div class="oe_title">
                         <h1>
-                            <field name="name" placeholder="Name"/>
+                            <field name="student_id" placeholder="Student ID"/>
                         </h1>
                     </div>
                     <group>
                         <group>
-<!--                            <field name="name"/>-->
+                            <field name="name"/>
+                            <!--<field name="name"/>-->
                             <field name="gender"/>
                             <field name="email"/>
                             <field name="department"/>
                         </group>
-                        <!--                        <group>-->
-                        <!--                            -->
-                        <!--                        </group>-->
+                        <!--<group>-->
+
+                        <!--</group>-->
                     </group>
 
                 </sheet>
